Fixes NAIRR Tenant status report access and GETManager scope
The NAIRR status reports were disappearing due to the URI to the markdown
templates being set to null by the hub-cluster-project import, which is a
separate import process from the markdown.  Also status reports are now only
accessible to Tenant managers with the GETManager scope, and the button links
to status reports are removed for users without the GETManager scope.

--- a/kustomize/overlays/moc/roles/deploy-workbenches/templates/notebook.yaml
+++ b/kustomize/overlays/moc/roles/deploy-workbenches/templates/notebook.yaml
@@ -9,7 +9,7 @@ metadata:
     openshift.io/description: ''
     openshift.io/display-name: {{ WORKBENCH_NAME }}
     notebooks.opendatahub.io/last-image-selection: 'ai-telemetry-workbench:1.1.0'
-    notebooks.opendatahub.io/last-size-selection: Small
+    notebooks.opendatahub.io/last-size-selection: Medium
     opendatahub.io/username: {{ WORKBENCH_NAME }}
   name: {{ WORKBENCH_NAME }}
   namespace: {{ WORKBENCH_NAMESPACE }}
